@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1327 2013/07/30 18:38:29 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1328 2013/07/31 01:14:16 zmedico Exp $
+
+  31 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild,
+  portage-2.2.0_alpha191.ebuild:
+  Generating make.conf PORTDIR setting for backward compatibility.
 
   30 Jul 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.13.2.ebuild,
   portage-2.2.0_alpha191.ebuild:
